namespaces/portfolio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
