namespaces/portfolio/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`talhajuikar.cloud`)
      kind: Rule
      services:
        - name: blog-service
          port: 80
